infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: client-depl
spec: 
  # number of pods we want to create
  replicas: 1
  # take a look at all Pods were created
  selector: 
    # find Pods with the label app:client
    matchLabels:
      app: client
  # here we specifying the configuration of a Pod we want
  # this deployment to create
  template:
    metadata:
      # we want Pod to have the label app:client
      labels:
        app: client
    # describing configuration options of the Pad we 
    # are about to create
    spec:
      # array of containers
      containers:
        - name: client
          image: yarepka/client:latest
          
# creating ClusterIP Service
---
apiVersion: v1
kind: Service
metadata:
  # service name
  name: client-srv
spec:
  # service type ClusterIP (if not specified ClusterIP is default)
  type: ClusterIP
  selector:
    # try to find all pods with label app:client
    app: client
  ports:
    - name: client
      protocol: TCP
      # node service port
      port: 3000
      # pod port
      targetPort: 3000
