infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: event-bus-depl
spec: 
  # number of pods we want to create
  replicas: 1
  # take a look at all Pods were created
  selector: 
    # find Pods with the label app:event-bus
    matchLabels:
      app: event-bus
  # here we specifying the configuration of a Pod we want
  # this deployment to create
  template:
    metadata:
      # we want Pod to have the label app:event-bus
      labels:
        app: event-bus
    # describing configuration options of the Pad we 
    # are about to create
    spec:
      # array of containers
      containers:
        - name: event-bus
          image: yarepka/event-bus:latest
          imagePullPolicy: Always
          
# creating ClusterIP Service
---
apiVersion: v1
kind: Service
metadata:
  # service name
  name: event-bus-srv
spec:
  # service type ClusterIP (if not specified ClusterIP is default)
  type: ClusterIP
  selector:
    # try to find all pods with label app:event-bus
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      # node service port
      port: 4005
      # pod port
      targetPort: 4005
