infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: query-depl
spec: 
  # number of pods we want to create
  replicas: 1
  # take a look at all Pods were created
  selector: 
    # find Pods with the label app:query
    matchLabels:
      app: query
  # here we specifying the configuration of a Pod we want
  # this deployment to create
  template:
    metadata:
      # we want Pod to have the label app:query
      labels:
        app: query
    # describing configuration options of the Pad we 
    # are about to create
    spec:
      # array of containers
      containers:
        - name: query
          image: yarepka/query:latest
          
# creating ClusterIP Service
---
apiVersion: v1
kind: Service
metadata:
  # service name
  name: query-srv
spec:
  # service type ClusterIP (if not specified ClusterIP is default)
  type: ClusterIP
  selector:
    # try to find all pods with label app:query
    app: query
  ports:
    - name: query
      protocol: TCP
      # node service port
      port: 4002
      # pod port
      targetPort: 4002
