infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  # will tell ingress controller that we try to feed it
  # some routing rules
  annotations:
    # ingress controller will continiously scan all
    # the objects or different config files and it
    # will try to find the one which has this annotation
    kubernetes.io/ingress.class: nginx
    # need in order to use rexExp in the path
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  # routing rules
  rules:
    # ingress assumess that we hosting many different apps
    # at different local domains (we can have a lot of apps # with different local domains in our kubernetes 
    # cluster)
    - host: posts.com
      http:
        paths:
          # Will take incoming traffic and send to the 
          # posts ClusterIP service

          # Browser send request to /posts/create
          - path: /posts/create 
            backend:
              # which ClusterIP service to send req to
              serviceName: posts-clusterip-srv
              servicePort: 4000
          - path: /posts
            backend:
              serviceName: query-srv 
              servicePort: 4002
          # regExp ?(.*) means 'anything'
          - path: /posts/?(.*)/comments
            backend: 
              serviceName: comments-srv
              servicePort: 4001
          # always will try to run React App, need to be
          # specified in the end
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
